--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@remix-run/server-runtime": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "isbot": "^3.6.3",
+    "marked": "^4.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tiny-invariant": "^1.3.1"
